// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generic block component matches snapshot with flex prop 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "width": "100%",
      },
      undefined,
      Object {
        "flex": 0.1,
      },
    ]
  }
>
   null 
</View>
`;

exports[`generic block component matches the snapshot with debug prop 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "width": "100%",
      },
      undefined,
      Object {
        "borderColor": "#d6d7da",
        "borderRadius": 4,
        "borderWidth": 0.5,
      },
    ]
  }
>
   null 
</View>
`;

exports[`generic block component matches the snapshot with no extra props 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "width": "100%",
      },
      undefined,
    ]
  }
>
   null 
</View>
`;

exports[`generic block component matches the snapshot with style prop 1`] = `
<View
  onTouchEnd={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "width": "100%",
      },
      Object {
        "backgroundColor": "blue",
        "width": "30%",
      },
    ]
  }
>
  null
</View>
`;
